[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expression_atlas_db"
version = "0.0.1"
description = "Database interface for Expression Atlas data"
authors = [
    {name = "Mitch Ledwith", email = "mitch@veliatx.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "SQLAlchemy>=2.0",
    "numpy>=1.24.4",
    "psycopg2-binary",
    "six>=1.12.0",
    "configparser>=4.0.2",
    "pandas",
    "alembic",
    "sqlalchemy_redshift",
    "s3fs",
    "anndata==0.9.2",
    "defusedxml",
    "tqdm",
]

[tool.setuptools]
packages = ["expression_atlas_db", "expression_atlas_db.test"]

[tool.setuptools.package-data]
"expression_atlas_db" = ["settings.ini"]
"expression_atlas_db.test" = ["test_data/test.gtf"]